<resources>
    <string name="app_name">Retro Rally</string>

    <!--авторизация -->
    <string name="password_hint">Введите ваш пароль</string>
    <string name="enter">Войти</string>
    <string name="first_page">Вход</string>
    <string name="greetings_text">Добро пожаловать! Для авторизации введите пароль</string>


    <string name="second_page">Главная страница</string>
    <string name="number_of_sector">Ваш участок: </string>

    <!-- описание времени -->
    <string name="start">начало работы</string>
    <string name="current">текущее время</string>
    <string name="end">конец работы</string>

    <!-- значения кнопок -->
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="null_button">0</string>
    <string name="send_button">ок</string>
    <string name="cancel">назад</string>

    <!-- номер участника -->
    <string name="car_num">номер участника</string>
    <string name="enter_car_num">Введите номер участника:</string>

    <!-- для главного экрана -->
    <string name="comment">комментарий</string>
    <string name="add_item">+</string>

    <!-- разное -->
    <string name="send_final_button">оправить</string>
    <string name="back_button">вернуться на первую страницу</string>
    <string name="congratulations">Результаты успешно отправлены в штаб!</string>
    <string name="take_a_picture_text">Сфотографируйте бумажные протоколы соревнования и отправьте их в штаб</string>
    <string name="error">Вы не добавили номер участника!</string>
    <string name="enter_message">Введите текст</string>
    <string name="number_hint">№</string>
    <string name="results_hint">Введите результат</string>
    <string name="image_button">Сделать фото</string>
    <string name="send_photo_button">Отправить фото</string>

    <string-array name="stop_line">
        <item>Недоезд > 50</item>
        <item>Недоезд</item>
        <item>ОК</item>
        <item>Переезд</item>
    </string-array>

</resources>