<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/one"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_button"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/two"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_button"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/three"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_button"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/four"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four_button"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@id/five"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/five"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_button"
        app:layout_constraintBottom_toTopOf="@id/eight"
        app:layout_constraintEnd_toStartOf="@id/six"
        app:layout_constraintStart_toEndOf="@id/four"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/six"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six_button"
        app:layout_constraintBottom_toTopOf="@id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/five"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/seven"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven_button"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        app:layout_constraintEnd_toStartOf="@id/eight"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/eight"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight_button"
        app:layout_constraintBottom_toTopOf="@id/nul"
        app:layout_constraintEnd_toStartOf="@id/nine"
        app:layout_constraintStart_toEndOf="@id/seven"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/nine"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine_button"
        app:layout_constraintBottom_toTopOf="@+id/sending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eight"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/cancel"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nul"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/nul"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/null_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sending"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/sending"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nul"
        app:layout_constraintTop_toBottomOf="@+id/nine" />
</androidx.constraintlayout.widget.ConstraintLayout>