<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.main.view.AuthorizationFragment">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/greetings_text"
        android:textColor="@color/blue_gray_800"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/blue_gray_300" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <Button
        android:id="@+id/next_button"
        style="@style/greenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="70dp"
        android:text="@string/enter" />
</LinearLayout>